--- a/iaroapp/static/css/styles.css
+++ b/iaroapp/static/css/styles.css
@@ -37,7 +37,7 @@ body.dark-page .navbar-brand-img {
 }
 
 .bg-gradient-secondary {
-  background-image: linear-gradient(310deg, #61589a 0%, #515a8f 100%);
+  background-image: linear-gradient(280deg, #66549b 0%, #515a8f 100%);
 }
 
 
