fix for user-learning-progress after refactoring user

--- a/interactions/templates/user_learning_progress.html
+++ b/interactions/templates/user_learning_progress.html
@@ -49,7 +49,7 @@
                                                     </div>
                                                 {% endfor %}
                                             {% else %}
-                                                <p>No PDFs available for this user.</p>
+                                                <p>No PDF-Lessons available for this user.</p>
                                             {% endif %}
                                         {% endwith %}
                                     </div>
