--- a/onboarding/templates/document_sign.html
+++ b/onboarding/templates/document_sign.html
@@ -1,25 +1,26 @@
 {% extends "base_generic.html" %}
 {% load static %}
 
-{% block widgets %}
-<div class="d-flex justify-content-end">
-    <a href="{% url 'documents_list' %}" class="btn mb-0 bg-gradient-primary">
-        Back to Documents
-    </a>
-</div>
-{% endblock widgets %}
+
 
 {% block content %}
     <iframe src="{{ signing_url }}" width="100%" height="600px" frameborder="0"></iframe>
 
+    <div class="d-flex mt-2 justify-content-start">
+        <a href="{% url 'documents_list' %}" class="btn mb-0 bg-gradient-primary">
+            Back to Documents
+        </a>
+    </div>
+
     <style>
-    iframe {
-        height: 80vh;
-        border-radius: 1rem;
-        border: 1px solid var(--bs-body-color);
-    }
-    .title {
-        margin: 0 !important;
-    }
+        iframe {
+            height: calc(100vh - 176px);
+            border-radius: 1rem;
+            border: 1px solid var(--bs-body-color);
+        }
+
+        .title {
+            margin: 0 !important;
+        }
     </style>
 {% endblock %}
